--- a/Chap-Introduction.Rnw
+++ b/Chap-Introduction.Rnw
@@ -20,6 +20,6 @@ plot(measured ~ actual, data = arsenic,
 @
 
 % The goal of this work is to extend the methods of calibration to more complicated settings. 
-In Chapter~\ref{chap:nonparametric}, we introduce \textit{semiparametric calibration}. Here we use semiparametric regression methods to estimate the calibration curve and make inference on the unknown $x_0$. The benefit of this approach is that we do not have to specify the exact form of the calibration curve. The downside to this approach is that the estimated calibration curve will be biased, hence, our inference about the unknown $x_0$ will also be biased. We correct for this bias by taking the mixed model approach to smoothing described in, for example, \citet{ruppert_semiparametric_2003}. A small Monte Carlo study shows that this correction is necessary to obtain calibration intervals with coverage probability near the nominal $1-\alpha$ level. We also extend the method of Bayesian linear calibration put forth by \citet{hoadley_bayesian_1970} by allowing for the calibration curve to be estimated semiparametrically as in \citet{crainiceanu_bayesian_2005}. In Chapter~\ref{chp:cal-dependent}, we extend the classical methods of calibration to work with linear mixed-effects models. We also propose a new parametric bootstrap algorithm that can be used to obtain an estimate of the entire sampling distribution of the estimate of $x_0$. We further show how this algorithm can also be used to improve upon the classical methods by removing normality assumptions that may not be satisfied in practice. We use several real datasets to demonstrate and compare our methods.
+The goal of this work is to extend the methods of calibration to more complicated settings. In Chapter~\ref{chap:nonparametric}, we introduce \textit{semiparametric calibration}. Here we use semiparametric regression methods to estimate the calibration curve and make inference on the unknown $x_0$. The benefit of this approach is that we do not have to specify the exact form of the calibration curve. The downside to this approach is that the estimated calibration curve will be biased, hence, our inference about the unknown $x_0$ will also be biased. We correct for this bias by taking the mixed model approach to smoothing described in, for example, \citet{ruppert_semiparametric_2003}. A small Monte Carlo study shows that this correction is necessary to obtain calibration intervals with coverage probability near the nominal $1-\alpha$ level. We also extend the method of Bayesian linear calibration put forth by \citet{hoadley_bayesian_1970} by allowing for the calibration curve to be estimated semiparametrically as in \citet{crainiceanu_bayesian_2005}. In Chapter~\ref{chp:cal-dependent}, we extend the classical methods of calibration to work with linear mixed-effects models. We also propose a new parametric bootstrap algorithm that can be used to obtain an estimate of the entire sampling distribution of the estimate of $x_0$. We further show how this algorithm can also be used to improve upon the classical methods by removing normality assumptions that may not be satisfied in practice. We use several real datasets to demonstrate and compare our methods.
 
 %This is similar (in spirit) to the parametric bootstrap adjustment proposed by \citet{oman_calibration_1998}, however, Oman's approach is only approximate and does not seem to account for the added variability from the observed response corresponding to the unknown $x_0$.
