--- a/Chap-Nonparametric.Rnw
+++ b/Chap-Nonparametric.Rnw
@@ -109,7 +109,7 @@ arrows(x0, f(x0), parusr[1], f(x0))
 
 Notice that the sine wave plotted in Figure~\ref{fig:sine-wave} is scaled to lie in $[0, 1] \times [0, 1]$ with a period of 2. For each of 1,000 simulations, we used $10$, $30$, and $50$ uniformly spaced designed points on the domain $[0, 1]$ with $1$, $2$, and $3$ independent replicates of the response at each design point. The errors were generated as i.i.d. $\mc{N}(0, 0.05^2)$ random variates and the true unknown was chosen to be $x_0 = \Sexpr{x0}$ (hence, $\mu_0 \approx \Sexpr{round(f(x0), 4)}$).
 
-Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-adjusted intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets ``washed out'' by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
+Tables~\ref{tab:pspline-monte-carlo-1} and \ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-adjusted intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets ``washed out'' by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
 
 <<sim1-sim2, echo = FALSE>>=
 load("/home/w108bmg/Desktop/Dissertation/Data/sim1.RData")
@@ -215,7 +215,7 @@ We begin by fitting a simple quadratic \ac{P-spline} with five knots:
 \begin{equation*}
   \mu(\text{\texttt{age}}_i) = \beta_0 + \beta_1\text{\texttt{age}}_i + \beta_2\text{\texttt{proof}}_i^2 + \sum_{k = 1}^5\alpha_k\left( \text{\texttt{proof}}_i - \xi_k \right)_+^2.
 \end{equation*}
-The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = \Sexpr{cal1$estimate}$ years with a 95\% confidence interval for $x_0$ of $(\Sexpr{cal1$lower}, \Sexpr{cal1$upper})$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = \Sexpr{cal2["estimate"]}$ years with a 95\% (bias-adjusted) confidence interval for $x_0$ of $(\Sexpr{cal2["lower"]}, \Sexpr{cal2["upper"]})$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively ``zeroed out'' (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example they happen to coincide with the (classical) inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
+The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = \Sexpr{cal1$estimate}$ years with a 95\% confidence interval for $x_0$ of $(\Sexpr{cal1$lower}, \Sexpr{cal1$upper})$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = \Sexpr{cal2["estimate"]}$ years with a 95\% (bias-adjusted) confidence interval for $x_0$ of $(\Sexpr{cal2["lower"]}, \Sexpr{cal2["upper"]})$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively ``zeroed out'' (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example, they happen to coincide with the classical inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
 
 <<whiskey-calibration, echo = FALSE, opts.label = 'fig.7by5', par = TRUE, fig.pos = 'H', fig.scap = 'Fitted  models for the whiskey data', fig.cap = 'Fitted  models for the whiskey data. \\textit{Left}: Quadratic linear model with 95\\% (pointwise) prediction band. \\textit{Right}: Quadratic \\ac{P-spline} with five knots and 95\\% (pointwise) bias-adjusted prediction band.'>>=
 par(mfrow = c(1, 2))
