--- a/Master.tex
+++ b/Master.tex
@@ -190,8 +190,8 @@
 % second line below.  Note that the original signatures are still required on
 % the hardcopy submitted to the library.
 
-% \committeeSignedDates{2 Jun 2011,3 Jun 2011,4 Jun 2011}
-% \deanSignedDate{9 Jun 2011}
+\committeeSignedDates{\vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}}
+% \deanSignedDate{13 Feb 2014}
 
 % \abstract{Calibration is an important and controversial topic in statistics. In this dissertation, we consider both semiparametric calibration and the application of calibration to grouped data, both of which may be addressed through the use of mixed-effects models. In Chapter~\ref{chap:nonparametric}, we propose a method for obtaining calibration intervals that have good coverage probability when the calibration curve has been estimated \textit{semiparametrically} and is biased. We also expand the traditional Bayesian approach to calibration by allowing for a semiparametric estimate of the calibration curve. In Chapter~\ref{chp:cal-dependent}, we extend the usual methods for statistical calibration to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters. Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. We start by extending the familiar Wald-based and inversion methods using the linear mixed-effects model. Then, we propose a simple parametric bootstrap algorithm that can be used to either obtain calibration intervals directly or to improve the inversion interval by relaxing the normality constraint on the approximate predictive pivot. In Appendix~\ref{app:investr}, we describe the R package \texttt{investr} we have developed for analyzing calibration data.}
 \abstract{Calibration, more generally referred to as inverse estimation, is an important and controversial topic in statistics. In this work, both semiparametric calibration and the application of calibration to grouped data is considered, both of which may be addressed through the use of the linear mixed-effects model. A method is proposed for obtaining calibration intervals that has good coverage probability when the calibration curve has been estimated semiparametrically and is biased. The traditional Bayesian approach to calibration is also expanded by allowing for a semiparametric estimate of the calibration curve. The usual methods for linear calibration are then extended to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters.  Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. Estimation techniques begin by extending the familiar
@@ -203,9 +203,9 @@ Wald-based and inversion methods using the linear mixed-effects model. Then, a s
 \ProjectNumber{}    % JON number (per advisor) or blank
 \SponsoringAgency{Dr. David S. Stargel \\
   Air Force Office of Scientific Research (AFOSR/RTA) \\
-  875 N. Randolph Street \\
-  Suite 325, Room 3112 \\
-  Arlington, VA 22203-1768}  % sponsor address or '\relax' (will appear blank)
+  875 N. Randolph Street Suite 325, Room 3112 \\
+  Arlington, VA 22203-1768 \\
+  (703)-696-6961 david.stargel@afosr.af.mil}  % sponsor address or '\relax' (will appear blank)
 \Acronyms{AFOSR/RTA}         % sponsor unit/office symbol or blank
 \SMReportNumber{}           % blank unless sponsoring agency assigned a report number
 \AddlSupplementaryNotes{}   % Add any other comments as necessary
@@ -214,8 +214,8 @@ Wald-based and inversion methods using the linear mixed-effects model. Then, a s
 \PageClassification {U}     % SF 298 classification
 \AbstractLimitation {UU}    % change to 'SAR' if limited distribution
 \SubjectTerms{Calibration, Bootstrap, Linear mixed-effects model, Smoothing}
-\ResponsiblePerson {Dr. Christine M. Schubert Kabban}
-\RPTelephone {\footnotesize{(937) 255-3636 x4549 christine.schubertkabban@afit.edu}}
+\ResponsiblePerson {Dr. Christine M. Schubert Kabban, AFIT/ENC}
+\RPTelephone {(937) 255-3636 x4549 christine.schubertkabban@afit.edu}
      % advisor's 4 digit extension and email address.  If necessary to fit into 
      % the block, the \footnotesize command can be placed before the phone
      % number to reduce the font size
@@ -339,12 +339,7 @@ Wald-based and inversion methods using the linear mixed-effects model. Then, a s
 
 
 %% Packages
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: cannot open the connection}}\end{kframe}
-\end{knitrout}
 
 
 % The acronym package can be used to add a list of acronyms.  Because
@@ -408,7 +403,7 @@ Suppose a new procedure has been developed for measuring the concentration (in $
 
 
 % The goal of this work is to extend the methods of calibration to more complicated settings. 
-In Chapter~\ref{chap:nonparametric}, we introduce \textit{semiparametric calibration}. Here we use semiparametric regression methods to estimate the calibration curve and make inference on the unknown $x_0$. The benefit of this approach is that we do not have to specify the exact form of the calibration curve. The downside to this approach is that the estimated calibration curve will be biased, hence, our inference about the unknown $x_0$ will also be biased. We correct for this bias by taking the mixed model approach to smoothing described in, for example, \citet{ruppert_semiparametric_2003}. A small Monte Carlo study shows that this correction is necessary to obtain calibration intervals with coverage probability near the nominal $1-\alpha$ level. We also extend the method of Bayesian linear calibration put forth by \citet{hoadley_bayesian_1970} by allowing for the calibration curve to be estimated semiparametrically as in \citet{crainiceanu_bayesian_2005}. In Chapter~\ref{chp:cal-dependent}, we extend the classical methods of calibration to work with linear mixed-effects models. We also propose a new parametric bootstrap algorithm that can be used to obtain an estimate of the entire sampling distribution of the estimate of $x_0$. We further show how this algorithm can also be used to improve upon the classical methods by removing normality assumptions that may not be satisfied in practice. We use several real datasets to demonstrate and compare our methods.
+The goal of this work is to extend the methods of calibration to more complicated settings. In Chapter~\ref{chap:nonparametric}, we introduce \textit{semiparametric calibration}. Here we use semiparametric regression methods to estimate the calibration curve and make inference on the unknown $x_0$. The benefit of this approach is that we do not have to specify the exact form of the calibration curve. The downside to this approach is that the estimated calibration curve will be biased, hence, our inference about the unknown $x_0$ will also be biased. We correct for this bias by taking the mixed model approach to smoothing described in, for example, \citet{ruppert_semiparametric_2003}. A small Monte Carlo study shows that this correction is necessary to obtain calibration intervals with coverage probability near the nominal $1-\alpha$ level. We also extend the method of Bayesian linear calibration put forth by \citet{hoadley_bayesian_1970} by allowing for the calibration curve to be estimated semiparametrically as in \citet{crainiceanu_bayesian_2005}. In Chapter~\ref{chp:cal-dependent}, we extend the classical methods of calibration to work with linear mixed-effects models. We also propose a new parametric bootstrap algorithm that can be used to obtain an estimate of the entire sampling distribution of the estimate of $x_0$. We further show how this algorithm can also be used to improve upon the classical methods by removing normality assumptions that may not be satisfied in practice. We use several real datasets to demonstrate and compare our methods.
 
 %This is similar (in spirit) to the parametric bootstrap adjustment proposed by \citet{oman_calibration_1998}, however, Oman's approach is only approximate and does not seem to account for the added variability from the observed response corresponding to the unknown $x_0$.
 
@@ -516,7 +511,7 @@ Hence, a $100(1 - \alpha)\%$ confidence interval for the mean response $\mu_0$ i
 
 Let $\mc{Y}_0$ denote an individual or future observation at the given point $\X_0$. We assume that $\mc{Y}_0 = \X_0\trans\bm{\beta} + \epsilon_0$, where $\epsilon_0 \sim \mc{N}(0, \sigma_\epsilon^2)$ and is independent of $\bm{\epsilon}$. The best predictor of $\mc{Y}_0$ is $\widehat{y}_0 = \X_0\trans\wh{\bm{\beta}}$, the same as $\wh{\mu}_0$, however, the variance of $\widehat{\mc{Y}}_0$ is wider: $\var\left\{\widehat{\mc{Y}}_0\right\} = \sigma_\epsilon^2 + \var\left\{\wh{\mu}_0\right\}$. This is intuitive since there is greater uncertainty in predicting the outcome of a continuous random variable than in estimating a fixed (population) parameter, such as its mean. Under the assumption of normal errors, we have that
 \begin{equation*}
-  \frac{\widehat{y}_0 - \mc{Y}_0}{\wh{\sigma}_\epsilon\sqrt{\left[1 + \X_0\trans \left( \X\trans\X \right)^{-1} \X_0 \right]}} \mathcal{T}\left(n-p\right),
+  \frac{\widehat{y}_0 - \mc{Y}_0}{\wh{\sigma}_\epsilon\sqrt{\left[1 + \X_0\trans \left( \X\trans\X \right)^{-1} \X_0 \right]}} \sim \mathcal{T}\left(n-p\right),
 \end{equation*}
 therefore, a $100(1 - \alpha)\%$ prediction interval for $\mc{Y}_0$ is simply
 \begin{equation}
@@ -1149,8 +1144,7 @@ Although this provides some theoretical justification for using the inverse esti
 \end{equation*}
 This is quite different from the approach put forth by \citet{hoadley_bayesian_1970} who does not treat $x_0$ as an explicit function of $\eta$, $\beta_0$, and $\beta_1$. Hunter and Lamboy also discuss the case where $\sigma_\epsilon^2$ is known, or at least, assumed known. The posterior they obtain for $x_0$ is equivalent to the posterior density for the ratio of bivariate normal random variables ($\sigma_\epsilon^2$ known) or bivariate $t$ random variables ($\sigma_\epsilon^2$ unknown), both of which have infinite variance. The latter is actually a generalization of the structural distribution for $x_0$ obtained by \citet{kalotay_structural_1971}. A more thorough analysis of these posteriors is given by \citet{hunter_bayesian_1979} and \citet{hunter_making_1979}. Hunter and Lamboy claim that, under reasonable conditions, the inversion and Wald intervals (Section~\ref{sec:inversion-interval} and Section~\ref{sec:wald_int}) provide accurate approximations to the highest posterior density (HPD) region for $x_0$. That said, \citet{hill_discussion_1981}, \citet{orban_discussion_1981}, \citet{lwin_discussion_1981}, and \citet{brown_multivariate_1982} all noted that Hunter and Lamboy's method offer some Bayesian justification for the classical estimator and confidence intervals. 
 
-\citet{lawless_discussion_1981} criticized the authors for not using a more flexible family of priors and described the sole reliance on improper priors as ``... merely attempting to dress classical frequency procedures in Bayesian clothes.'' \citet{hill_discussion_1981} made the same criticism and argued that a carefully selected gamma prior for $\beta_1$ would have been more useful since, in practice, it is often reasonable to assume that $\beta_1$ is positive and not too close to zero. Lawless and Hill also pointed out that it is more realistic to assume, \textit{a priori}, independence of $(\beta_0, \beta_1, \sigma_\epsilon^2)$ and $x_0$ (as did Hoadley), rather than 
-independence of $(\beta_0, \beta_1, \sigma_\epsilon^2)$ and $\eta = \beta_0 + \beta_1 x_0$. Hill also pointed out that Hunter and Lamboy's analysis is just a special case of that proposed by Hoadley with 
+\citet{lawless_discussion_1981} criticized the authors for not using a more flexible family of priors and described the sole reliance on improper priors as ``... merely attempting to dress classical frequency procedures in Bayesian clothes.'' \citet{hill_discussion_1981} made the same criticism and argued that a carefully selected gamma prior for $\beta_1$ would have been more useful since, in practice, it is often reasonable to assume that $\beta_1$ is positive and not too close to zero. Lawless and Hill also pointed out that it is more realistic to assume, \textit{a priori}, independence of $(\beta_0, \beta_1, \sigma_\epsilon^2)$ and $x_0$ (as did Hoadley), rather than independence of $(\beta_0, \beta_1, \sigma_\epsilon^2)$ and $\eta = \beta_0 + \beta_1 x_0$. Hill also pointed out that the approach used by \citet{hunter_bayesian_1981} is just a special case of that proposed by \citet{hoadley_bayesian_1970} with 
 \begin{equation*}
   \pi\left(\beta_0, \beta_1, \sigma_\epsilon^2, x_0\right) \propto \left\{ \begin{array}{l l}
                                                          |\beta_1|/\sigma_\epsilon^2, & \quad \text{$\sigma_\epsilon^2$ unknown} \\
@@ -1334,7 +1328,7 @@ We designed a small Monte Carlo study to investigate the coverage probability of
 
 Notice that the sine wave plotted in Figure~\ref{fig:sine-wave} is scaled to lie in $[0, 1] \times [0, 1]$ with a period of 2. For each of 1,000 simulations, we used $10$, $30$, and $50$ uniformly spaced designed points on the domain $[0, 1]$ with $1$, $2$, and $3$ independent replicates of the response at each design point. The errors were generated as i.i.d. $\mc{N}(0, 0.05^2)$ random variates and the true unknown was chosen to be $x_0 = 0.75$ (hence, $\mu_0 \approx 0.8536$).
 
-Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-adjusted intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets ``washed out'' by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
+Tables~\ref{tab:pspline-monte-carlo-1} and \ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-adjusted intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets ``washed out'' by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
 
 
 
@@ -1416,7 +1410,10 @@ Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display t
 The point of this example is to demonstrate how our bias-adjusted semiparametric approach to calibration compares against a simpler parametric model (when one is available). To this end, we analyze the whiskey data from \citet{schoeneman_analytical_1971} presented in Figure~\ref{fig:whiskey-scatter}. The data give the proof (measured as twice the percentage of alcohol by volume, denoted 2ABV) of whiskey stored in a charred oak barrel against time in years; clearly, some curvature is present. Suppose a new sample is obtained from the same barrel and that the proof is observed to be $y_0 = 108 \text{ 2ABV}$. It is desired to estimate how long this batch has been aged.
 
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: rootSolve}}\end{kframe}\begin{figure}[H]
 
 \includegraphics[width=\maxwidth]{figure/whiskey-scatter} \caption[Scatterplot of the whiskey data]{Scatterplot of the whiskey data.\label{fig:whiskey-scatter}}
 \end{figure}
@@ -1429,7 +1426,7 @@ We begin by fitting a simple quadratic \ac{P-spline} with five knots:
 \begin{equation*}
   \mu(\text{\texttt{age}}_i) = \beta_0 + \beta_1\text{\texttt{age}}_i + \beta_2\text{\texttt{proof}}_i^2 + \sum_{k = 1}^5\alpha_k\left( \text{\texttt{proof}}_i - \xi_k \right)_+^2.
 \end{equation*}
-The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = 5.2329$ years with a 95\% confidence interval for $x_0$ of $(4.6776, 5.7352)$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = 5.2329$ years with a 95\% (bias-adjusted) confidence interval for $x_0$ of $(4.6776, 5.7352)$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively ``zeroed out'' (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example they happen to coincide with the (classical) inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
+The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = 5.2329$ years with a 95\% confidence interval for $x_0$ of $(4.6776, 5.7352)$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = 5.2329$ years with a 95\% (bias-adjusted) confidence interval for $x_0$ of $(4.6776, 5.7352)$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively ``zeroed out'' (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example, they happen to coincide with the classical inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
