--- a/Master.Rnw
+++ b/Master.Rnw
@@ -141,8 +141,8 @@
 % second line below.  Note that the original signatures are still required on
 % the hardcopy submitted to the library.
 
-% \committeeSignedDates{2 Jun 2011,3 Jun 2011,4 Jun 2011}
-% \deanSignedDate{9 Jun 2011}
+\committeeSignedDates{\vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}}
+% \deanSignedDate{13 Feb 2014}
 
 % \abstract{Calibration is an important and controversial topic in statistics. In this dissertation, we consider both semiparametric calibration and the application of calibration to grouped data, both of which may be addressed through the use of mixed-effects models. In Chapter~\ref{chap:nonparametric}, we propose a method for obtaining calibration intervals that have good coverage probability when the calibration curve has been estimated \textit{semiparametrically} and is biased. We also expand the traditional Bayesian approach to calibration by allowing for a semiparametric estimate of the calibration curve. In Chapter~\ref{chp:cal-dependent}, we extend the usual methods for statistical calibration to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters. Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. We start by extending the familiar Wald-based and inversion methods using the linear mixed-effects model. Then, we propose a simple parametric bootstrap algorithm that can be used to either obtain calibration intervals directly or to improve the inversion interval by relaxing the normality constraint on the approximate predictive pivot. In Appendix~\ref{app:investr}, we describe the R package \texttt{investr} we have developed for analyzing calibration data.}
 \abstract{Calibration, more generally referred to as inverse estimation, is an important and controversial topic in statistics. In this work, both semiparametric calibration and the application of calibration to grouped data is considered, both of which may be addressed through the use of the linear mixed-effects model. A method is proposed for obtaining calibration intervals that has good coverage probability when the calibration curve has been estimated semiparametrically and is biased. The traditional Bayesian approach to calibration is also expanded by allowing for a semiparametric estimate of the calibration curve. The usual methods for linear calibration are then extended to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters.  Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. Estimation techniques begin by extending the familiar
@@ -154,9 +154,9 @@ Wald-based and inversion methods using the linear mixed-effects model. Then, a s
 \ProjectNumber{}    % JON number (per advisor) or blank
 \SponsoringAgency{Dr. David S. Stargel \\
   Air Force Office of Scientific Research (AFOSR/RTA) \\
-  875 N. Randolph Street \\
-  Suite 325, Room 3112 \\
-  Arlington, VA 22203-1768}  % sponsor address or '\relax' (will appear blank)
+  875 N. Randolph Street Suite 325, Room 3112 \\
+  Arlington, VA 22203-1768 \\
+  (703)-696-6961 david.stargel@afosr.af.mil}  % sponsor address or '\relax' (will appear blank)
 \Acronyms{AFOSR/RTA}         % sponsor unit/office symbol or blank
 \SMReportNumber{}           % blank unless sponsoring agency assigned a report number
 \AddlSupplementaryNotes{}   % Add any other comments as necessary
@@ -165,8 +165,8 @@ Wald-based and inversion methods using the linear mixed-effects model. Then, a s
 \PageClassification {U}     % SF 298 classification
 \AbstractLimitation {UU}    % change to 'SAR' if limited distribution
 \SubjectTerms{Calibration, Bootstrap, Linear mixed-effects model, Smoothing}
-\ResponsiblePerson {Dr. Christine M. Schubert Kabban}
-\RPTelephone {\footnotesize{(937) 255-3636 x4549 christine.schubertkabban@afit.edu}}
+\ResponsiblePerson {Dr. Christine M. Schubert Kabban, AFIT/ENC}
+\RPTelephone {(937) 255-3636 x4549 christine.schubertkabban@afit.edu}
      % advisor's 4 digit extension and email address.  If necessary to fit into 
      % the block, the \footnotesize command can be placed before the phone
      % number to reduce the font size
@@ -312,7 +312,8 @@ knit_hooks$set(rexample = function(before, options, envir) {
 ## Source script files
 source("/home/w108bmg/Desktop/Dissertation/R code/pspline.R")
 source("/home/w108bmg/Desktop/Dissertation/R code/invest-lme.R")
-source("/home/w108bmg/Desktop/Dissertation/R code/bootMer2.R")
+source("/home/w108bmg/Desktop/Dissertation/R code/Parametric bootstrap functions.R")
+# source("/home/w108bmg/Desktop/Dissertation/R code/bootMer2.R")
 
 ## Function to calculate HPD interval
 hdi <- function(x, level = 0.95) {
