--- a/Master.tex
+++ b/Master.tex
@@ -193,7 +193,6 @@
 \committeeSignedDates{\vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}}
 % \deanSignedDate{13 Feb 2014}
 
-% \abstract{Calibration is an important and controversial topic in statistics. In this dissertation, we consider both semiparametric calibration and the application of calibration to grouped data, both of which may be addressed through the use of mixed-effects models. In Chapter~\ref{chap:nonparametric}, we propose a method for obtaining calibration intervals that have good coverage probability when the calibration curve has been estimated \textit{semiparametrically} and is biased. We also expand the traditional Bayesian approach to calibration by allowing for a semiparametric estimate of the calibration curve. In Chapter~\ref{chp:cal-dependent}, we extend the usual methods for statistical calibration to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters. Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. We start by extending the familiar Wald-based and inversion methods using the linear mixed-effects model. Then, we propose a simple parametric bootstrap algorithm that can be used to either obtain calibration intervals directly or to improve the inversion interval by relaxing the normality constraint on the approximate predictive pivot. In Appendix~\ref{app:investr}, we describe the R package \texttt{investr} we have developed for analyzing calibration data.}
 \abstract{Calibration, more generally referred to as inverse estimation, is an important and controversial topic in statistics. In this work, both semiparametric calibration and the application of calibration to grouped data is considered, both of which may be addressed through the use of the linear mixed-effects model. A method is proposed for obtaining calibration intervals that has good coverage probability when the calibration curve has been estimated semiparametrically and is biased. The traditional Bayesian approach to calibration is also expanded by allowing for a semiparametric estimate of the calibration curve. The usual methods for linear calibration are then extended to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters.  Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. Estimation techniques begin by extending the familiar
 Wald-based and inversion methods using the linear mixed-effects model. Then, a simple parametric bootstrap algorithm is proposed that can be used to either obtain calibration intervals directly, or to improve the inversion interval by relaxing the normality constraint on the approximate predictive pivot. Many of these methods have been incorporated into the \pkg{R} package, \code{investr}, which has been developed for analyzing calibration data.}
 
@@ -201,11 +200,11 @@ Wald-based and inversion methods using the linear mixed-effects model. Then, a s
 \DatesCovered{Oct 2011--Mar 2014} % First quarter of classes to Graduation
 \ContractNumber{}   % "in house" if AFIT sponsored or blank otherwise
 \ProjectNumber{}    % JON number (per advisor) or blank
-\SponsoringAgency{Dr. David S. Stargel \\
-  Air Force Office of Scientific Research (AFOSR/RTA) \\
-  875 N. Randolph Street Suite 325, Room 3112 \\
+\SponsoringAgency{Air Force Office of Scientific Research (AFOSR/RTA) \\
+  Dr. David S. Stargel \\
+  875 N. Randolph Street, Suite 325, Room 3112 \\
   Arlington, VA 22203-1768 \\
-  (703)-696-6961 david.stargel@afosr.af.mil}  % sponsor address or '\relax' (will appear blank)
+  david.stargel@afosr.af.mil}  % sponsor address or '\relax' (will appear blank)
 \Acronyms{AFOSR/RTA}         % sponsor unit/office symbol or blank
 \SMReportNumber{}           % blank unless sponsoring agency assigned a report number
 \AddlSupplementaryNotes{}   % Add any other comments as necessary
