--- a/Master.tex
+++ b/Master.tex
@@ -190,8 +190,8 @@
 % second line below.  Note that the original signatures are still required on
 % the hardcopy submitted to the library.
 
-\committeeSignedDates{\vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}, \vphantom{13 Feb 2014}}
-% \deanSignedDate{13 Feb 2014}
+\committeeSignedDates{2/27/2014, 2/27/2014, 2/27/2014}
+\deanSignedDate{3/3/2014}
 
 \abstract{Calibration, more generally referred to as inverse estimation, is an important and controversial topic in statistics. In this work, both semiparametric calibration and the application of calibration to grouped data is considered, both of which may be addressed through the use of the linear mixed-effects model. A method is proposed for obtaining calibration intervals that has good coverage probability when the calibration curve has been estimated semiparametrically and is biased. The traditional Bayesian approach to calibration is also expanded by allowing for a semiparametric estimate of the calibration curve. The usual methods for linear calibration are then extended to the case of grouped data, that is, where observations can be categorized into a finite set of homogeneous clusters.  Observations belonging to the same cluster are often similar and cannot be considered as independent; hence, we must account for within-subject correlation when making inference. Estimation techniques begin by extending the familiar
 Wald-based and inversion methods using the linear mixed-effects model. Then, a simple parametric bootstrap algorithm is proposed that can be used to either obtain calibration intervals directly, or to improve the inversion interval by relaxing the normality constraint on the approximate predictive pivot. Many of these methods have been incorporated into the \pkg{R} package, \code{investr}, which has been developed for analyzing calibration data.}
